# cxregions

./: .gitignore  .nojekyll  AGENTS.md  README.md  curves.html  index.html  intersections.html  mobius.html  paths.html  polygons.html  pyproject.toml  regions.html  robots.txt  search.json  setup.py  sitemap.xml
.github/workflows/: python-package.yml  python-test.yml
docs/: objects.json
docs/reference/: curves.qmd  paths.qmd  regions.qmd
reference/: curves.html  index.html  mobius.html  paths.html  regions.html
src/cxregions/: __init__.py  curves.py  mobius.py  paths.py  regions.py
tests/: test_docstring_examples.py  test_intersections.py  test_mobius.py  test_notimplemented.py  test_regions.py
