[project]
authors = [{name = "Toby Driscoll", email = "driscoll@udel.edu"}]
dependencies = ["juliacall>=0.9.30,<0.10"]
name = "cxregions"
requires-python = ">= 3.11"
version = "0.1.2"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cxregions = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.5,<3"
pytest = ">=9.0.1,<10"
hatch = ">=1.16.1,<2"
twine = ">=6.2.0,<7"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = ["test"]
