[project]
authors = [{name = "Toby Driscoll", email = "driscoll@udel.edu"}]
dependencies = ["juliacall>=0.9.30,<0.10", "numpy>=1.23.5,<2"]
name = "cxregions"
readme = "README.md"
description = "A Python interface to the ComplexRegions.jl Julia package"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]
requires-python = ">= 3.11"
version = "0.1.2"

[project.urls]
Homepage = "https://github.com/complexvariables/cxregions"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cxregions = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=1.23.5,<2"
pytest = ">=7.0.1,<8"
hatch = ">=1.6.1,<2"
twine = ">=4.0.0,<5"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = ["test"]
