[project]
authors = [{name = "Toby Driscoll", email = "driscoll@udel.edu"}]
dependencies = ["juliacall>=0.9.30,<0.10", "numpy>=2.1,<3", "quartodoc>=0.11.1,<0.12"]
name = "cxregions"
readme = "README.md"
description = "A Python interface to the ComplexRegions.jl Julia package"
license = "MIT"
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]
requires-python = ">= 3.11"
version = "0.1.6"

[project.urls]
Homepage = "https://github.com/complexvariables/cxregions"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cxregions = { path = ".", editable = true }
# quartodoc 0.11.1 only requires "griffe>=0.33", but griffe 2.0 split into
# griffe/griffelib/griffecli and broke quartodoc's import shim. Pin to 1.x.
griffe = ">=1.5.1,<2"

[tool.pixi.tasks]
docs-api = { cmd = "quartodoc build", cwd = "docs", description = "Generate the API reference pages from docstrings" }
docs = { cmd = "quarto render", cwd = "docs", depends-on = ["docs-api"], description = "Build the documentation website" }
docs-preview = { cmd = "quarto preview", cwd = "docs", depends-on = ["docs-api"], description = "Build and live-preview the documentation website" }
docs-publish = { cmd = "quarto publish gh-pages --no-prompt", cwd = "docs", depends-on = ["docs-api"], description = "Render and publish the documentation to the gh-pages branch" }

[tool.pixi.dependencies]
numpy = ">=2.1,<3"
pytest = ">=9.0.1,<10"
hatch = ">=1.16,<2"
twine = ">=6.0.0,<7"
matplotlib = ">=3.10.8,<4"
jupyter = ">=1.1.1,<2"
ipython = ">=9.9.0,<10"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.environments]
test = ["test"]
